--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "author": "Precious Jahlom Agboado",
   "license": "MIT",
   "dependencies": {
+    "node-watch": "^0.3.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-node-webkit-builder": "^1.0.2"
   }
 }
