--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-node-webkit-builder": "^1.0.2"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-node-webkit-builder": "^1.0.2",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
