--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-node-webkit-builder": "^1.0.2",
     "load-grunt-tasks": "^3.1.0"
   }
